# bitwig-docked-plugins

./: .clang-format  .editorconfig  .gitignore  README  README.md  pom.xml  start-bitwig.sh
doc/: TESTING.md
src/main/java/dev/late/bitwigabstractionlayer/: BrowserState.java  Device.java  DeviceButton.java  DeviceChain.java  GuiElement.java  Hooks.java  LongRectangle.java  MouseButtonPressedEvent.java
src/main/java/dev/late/main/: Agent.java  DisplayUtil.java  RateLimiter.java  Util.java
src/main/native/: CMakeLists.txt  dev_late_main_DisplayUtil.h  displayutil.cpp
src/main/resources/: config.txt
src/test/java/dev/late/bitwigabstractionlayer/: HooksIntegrationTest.java
